--- a/edit.css
+++ b/edit.css
@@ -347,3 +347,90 @@ margin-top: 20px;
     font-size: 20px;
     border: none;
 }
+#right{
+    width:80%;
+    /* height:600px; */
+    border:1px solid grey;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#profilebody{
+    height:600px;
+    width:70%;
+    /* border:1px solid red; */
+}
+#profile{
+    height:300px;
+    width:100%;
+    border:1px solid rgb(236, 235, 235);
+    display: flex;
+    box-shadow: 5px 10px 15px rgb(234, 229, 229);
+}
+#profile>div:nth-child(1){
+    width:40%;
+    height:100%;
+    /* border:1px solid green; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#profile>div:nth-child(1)>img{
+    height:90%;
+    width:90%;
+    border-radius: 50%;
+}
+#profile>div:nth-child(2){
+    width:60%;
+    height:100%;
+    /* border:1px solid blue; */
+    padding-top: 40px;
+    padding-left: 20px;
+}
+#profile>div:nth-child(2)>p:nth-child(1){
+    font-weight: bold;
+    margin-bottom: 20px;
+    font-size: 22px;
+}
+#editprofile{
+    width:100%;
+    /* height:350px; */
+    /* border:1px solid gold; */
+    margin-top: 80px;
+    display: flex;
+    justify-content: center;
+}
+#editprofile>form{
+    width:80%;
+    height: 300px;
+    /* border: 1px solid black; */
+}
+#editprofile>form>label{
+    font-weight: bold;
+    font-size: 30px;
+}
+#editprofile>form>input{
+    height:30px;
+    width:80%;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    padding-left: 20px;
+    border:1px solid grey;
+}
+
+.submit1
+{
+    width: 50%;
+    margin: auto;
+    color: white;
+    border: none;
+}
+.submit1 input
+{
+    width: 50%;
+    height: 30px;
+    background-color: #1877F2;
+    color: white;
+    border: none;
+    margin-top: 20px;
+}
